# speaky

./: Makefile  README.md  pyproject.toml
.github/workflows/: ci.yaml
speak/: __init__.py  cli.py  core.py  glitch_detection.py  remote_modal.py  transcription.py
speaky/: cli.py  core.py  remote_modal.py  tts.py
tests/: test_cli.py  test_import.py
voiceit/: cli.py  core.py
